
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef scalar_t__ uint32_t ;
struct TYPE_3__ {char* buf; } ;
struct sliding_view {TYPE_1__ buf; scalar_t__ max_off; } ;
struct line_buffer {int dummy; } ;
typedef int off_t ;
typedef int FILE ;


 struct sliding_view SLIDING_VIEW_INIT (int *,int ) ;
 scalar_t__ S_IFLNK ;
 int assert (int) ;
 long buffer_tmpfile_prepare_to_read (int *) ;
 int * buffer_tmpfile_rewind (int *) ;
 int check_preimage_overflow (scalar_t__,int) ;
 int die (char*,...) ;
 int fflush (int ) ;
 char* get_response_line () ;
 scalar_t__ init_postimage () ;
 scalar_t__ move_window (struct sliding_view*,scalar_t__,int) ;
 scalar_t__ parse_cat_response_line (char const*,scalar_t__*) ;
 int postimage ;
 int printf (char*,char const*) ;
 int report_buffer ;
 int signed_add_overflows (scalar_t__,int) ;
 int stdout ;
 int strbuf_addstr (TYPE_1__*,char*) ;
 int strbuf_release (TYPE_1__*) ;
 int strlen (char*) ;
 scalar_t__ svndiff0_apply (struct line_buffer*,int ,struct sliding_view*,int *) ;

__attribute__((used)) static long apply_delta(off_t len, struct line_buffer *input,
   const char *old_data, uint32_t old_mode)
{
 long ret;
 struct sliding_view preimage = SLIDING_VIEW_INIT(&report_buffer, 0);
 FILE *out;

 if (init_postimage() || !(out = buffer_tmpfile_rewind(&postimage)))
  die("cannot open temporary file for blob retrieval");
 if (old_data) {
  const char *response;
  printf("cat-blob %s\n", old_data);
  fflush(stdout);
  response = get_response_line();
  if (parse_cat_response_line(response, &preimage.max_off))
   die("invalid cat-blob response: %s", response);
  check_preimage_overflow(preimage.max_off, 1);
 }
 if (old_mode == S_IFLNK) {
  strbuf_addstr(&preimage.buf, "link ");
  check_preimage_overflow(preimage.max_off, strlen("link "));
  preimage.max_off += strlen("link ");
  check_preimage_overflow(preimage.max_off, 1);
 }
 if (svndiff0_apply(input, len, &preimage, out))
  die("cannot apply delta");
 if (old_data) {

  assert(!signed_add_overflows(preimage.max_off, 1));
  preimage.max_off++;
  if (move_window(&preimage, preimage.max_off - 1, 1))
   die("cannot seek to end of input");
  if (preimage.buf.buf[0] != '\n')
   die("missing newline after cat-blob response");
 }
 ret = buffer_tmpfile_prepare_to_read(&postimage);
 if (ret < 0)
  die("cannot read temporary file for blob retrieval");
 strbuf_release(&preimage.buf);
 return ret;
}
